--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,8 +1,8 @@
 # Auto-generated from "Cargo.yml"
 [dependencies]
-proc-macro2 = "0.4.27"
-quote = "0.6.11"
-syn = "0.15.26"
+proc-macro2 = "^1"
+quote = "^1"
+syn = "^1"
 
 [lib]
 proc-macro = true
