Polish for publication.

--- a/Cargo.yml
+++ b/Cargo.yml
@@ -24,7 +24,7 @@ package:
   # - `git tag x.x.x` with version number.
   # - `git push && git push --tags`
   #
-  version       : 0.1.0
+  version       : 0.1.0-alpha.1
   name          : thespis_derive
   edition       : '2018'
   authors       : [ Naja Melan <najamelan@autistici.org> ]
@@ -40,22 +40,13 @@ package:
   metadata:
     docs:
       rs:
-        features: [ external_doc ]
+        all-featiures: true
 
 
 badges:
 
   maintenance : { status     : actively-developed        }
   travis-ci   : { repository : thespis-rs/thespis_derive }
-
-
-features:
-
-  default: []
-
-  # only used internally, don't use
-  #
-  external_doc: []
 
 
 lib:
@@ -68,4 +59,9 @@ dependencies:
   proc-macro2: ^1
   syn        : { version: ^1, features: [full] }
   quote      : ^1
+
+
+build-dependencies:
+
+  rustc_version: ^0.2
 
