--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,6 +6,9 @@ status = "actively-developed"
 [badges.travis-ci]
 repository = "thespis-rs/thespis_derive"
 
+[build-dependencies]
+rustc_version = "^0.2"
+
 [dependencies]
 proc-macro2 = "^1"
 quote = "^1"
@@ -13,10 +16,6 @@ quote = "^1"
 [dependencies.syn]
 features = ["full"]
 version = "^1"
-
-[features]
-default = []
-external_doc = []
 
 [lib]
 proc-macro = true
@@ -33,9 +32,9 @@ license = "Unlicense"
 name = "thespis_derive"
 readme = "README.md"
 repository = "https://github.com/thespis-rs/thespis_derive"
-version = "0.1.0"
+version = "0.1.0-alpha.1"
 
 [package.metadata]
 [package.metadata.docs]
 [package.metadata.docs.rs]
-features = ["external_doc"]
+all-featiures = true
