--- a/Cargo.toml
+++ b/Cargo.toml
@@ -32,9 +32,9 @@ license = "Unlicense"
 name = "thespis_derive"
 readme = "README.md"
 repository = "https://github.com/thespis-rs/thespis_derive"
-version = "0.1.0-alpha.1"
+version = "0.1.0"
 
 [package.metadata]
 [package.metadata.docs]
 [package.metadata.docs.rs]
-all-featiures = true
+all-features = true
