--- a/Cargo.yml
+++ b/Cargo.yml
@@ -24,7 +24,7 @@ package:
   # - `git tag x.x.x` with version number.
   # - `git push && git push --tags`
   #
-  version       : 0.1.0-alpha.1
+  version       : 0.1.0
   name          : thespis_derive
   edition       : '2018'
   authors       : [ Naja Melan <najamelan@autistici.org> ]
@@ -40,7 +40,7 @@ package:
   metadata:
     docs:
       rs:
-        all-featiures: true
+        all-features: true
 
 
 badges:
