--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,11 +1,4 @@
 # Auto-generated from "Cargo.yml"
-[badges]
-[badges.maintenance]
-status = "actively-developed"
-
-[badges.travis-ci]
-repository = "thespis-rs/thespis_derive"
-
 [build-dependencies]
 rustc_version = "^0.4"
 
@@ -25,13 +18,14 @@ authors = ["Naja Melan <najamelan@autistici.org>"]
 categories = ["asynchronous", "concurrency"]
 description = "Derive macros for thespis traits"
 documentation = "https://docs.rs/thespis_derive"
-edition = "2018"
+edition = "2021"
 homepage = "https://github.com/thespis-rs/thespis_derive"
 keywords = ["async", "futures", "actor", "thespis"]
 license = "Unlicense"
 name = "thespis_derive"
 readme = "README.md"
 repository = "https://github.com/thespis-rs/thespis_derive"
+resolver = "2"
 version = "0.1.0"
 
 [package.metadata]
